k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: aegonish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: aegonishblog/aegonish-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: aegonish
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
